clusters/prod/apps/deara/addons/clawhost-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clawhost-api
  namespace: app-deara-prod
spec:
  type: ExternalName
  externalName: clawhost-prod.app-clawhost-prod.svc.cluster.local
